--- a/index.html
+++ b/index.html
@@ -1,74 +1,112 @@
+<!DOCTYPE html>
+<html>
+<body>
+
 <center>
-<a href="#A1">[About]</a> 
-<a href="#A2">[Research]</a> 
-<a href="#A3">[Publications]</a> 
+  <font size='5'>
+    <a href="#A1"><u>[About]</u></a>
+    <a href="#A2"><u>[Research]</u></a> 
+    <a href="#A3"><u>[Publications]</u></a> 
+  </font> 
 </center>
 <br />
 
-<h3 id="A1">About</h3> 
-I am a PhD candidate at <a href="http://software.imdea.org/about.html">IMDEA Software Institute</a>.
-I am working under the supervison of <a href="http://software.imdea.org/~juanca/">Juan Caballero</a>. <br />
-I did my Master of Sciences in Information Technology (MSIT) from <a href="http://seecs.nust.edu.pk/">
-NUST School of Electrical Engineering and Computer Science (SEECS)</a> in 2010. I worked on my thesis under 
-the supervision of <a href="http://seecs.nust.edu.pk/faculty/khayam.html">Syed Ali Khayam</a>. 
-View further details on my <a href="http://irfanulhaq.info/">homepage</a> or
-<a href="https://scholar.google.es/citations?user=E2aRq30AAAAJ&hl=en">Google Scholar</a>.
+<div style="text-align: center;">
+  <div style="display: inline-block; text-align: left;">
+    <h2 id="A1">About</h2> 
+      I am a PhD candidate at <a href="http://software.imdea.org/about.html">IMDEA Software Institute</a>.
+      I work under the supervison of <a href="http://software.imdea.org/~juanca/">Juan Caballero</a>. <br />
+      I did my Master of Sciences in Information Technology (MSIT) from <a href="http://seecs.nust.edu.pk/"> <br />
+      NUST School of Electrical Engineering and Computer Science (SEECS)</a> in 2010. <br />
+      I worked on my thesis under the supervision of <a href="http://seecs.nust.edu.pk/faculty/khayam.html">Syed Ali Khayam</a>. <br />
+      View further details on my <a href="http://irfanulhaq.info/">homepage</a> or
+      <a href="https://scholar.google.es/citations?user=E2aRq30AAAAJ&hl=en">Google Scholar</a>.
 
-<h3 id="A2">Research Interests</h3>
-<ul>
-  <li>Malware Analysis</li>
-  <li>Binary Analysis</li> 
-  <li>Intrusion/Anomaly Detection</li> 
-  <li>System and Network Security</li>
-</ul>
+    <h2 id="A2">Research Interests</h2>
+      <ul>
+        <li>System and network security</li>
+        <li>Malware and binary code analysis</li>
+        <li>Binary code similarity</li> 
+        <li>Intrusion and anomaly detection</li> 
+      </ul>
 
-<h3 id="A3">Refreed publications</h3>
-<ul>
-  <li>
-    <b>Malware Lineage in the Wild</b> <br />
-    <i>Irfan Ul Haq</i>, Sergio Chica, Juan Caballero, and Somesh Jha<br />
-    Under Submission.<br />
-    <a href="https://arxiv.org/pdf/1710.05202.pdf">[.pdf]</a>
-    <a>[.ppt]</a> <br />
-  </li>
-  <br />
+    <h2 id="A3">Refreed Publications</h2>
+    <ul>
+      <li> <b>Malware Lineage in the Wild</b> </br>
+        <u>Irfan Ul Haq</u>, Sergio Chica, Juan Caballero, and Somesh Jha <br />
+        In Elsevier Computers & Security -- Journal (COSE), September, 2018 <br />
+        <a href="https://arxiv.org/pdf/1710.05202.pdf">[.pdf]</a>
+        <a href="https://github.com/haqirfan/haqirfan.github.io/blob/master/lineage.pdf">[.ppt]</a> <br />
+      </li> <br />
 
-  <li>
-    <b>Ayudante: Identifying Undesired Variable Interactions</b> <br />
-    <i>Irfan Ul Haq</i>, Juan Caballero, and Michael D. Ernst<br />
-    13th International Workshop on Dynamic Analysis (WODA), October 26, 2015.<br />
-    Pittsburgh, PA, USA. <br />
-    <a href="https://software.imdea.org/~juanca/papers/ayudante_woda15.pdf">[.pdf]</a>
-    <a href="https://homes.cs.washington.edu/~mernst/pubs/variable-interactions-woda2015-slides.pdf">[.ppt]</a> <br />
-  </li>
-  <br />
+      <li> <b>Ayudante: Identifying Undesired Variable Interactions </b> </br >
+        <u>Irfan Ul Haq</u>, Juan Caballero, and Michael D. Ernst <br />
+        13th International Workshop on Dynamic Analysis (WODA), October 26, 2015. Pittsburgh, USA. <br />
+        <a href="https://software.imdea.org/~juanca/papers/ayudante_woda15.pdf">[.pdf]</a>
+        <a href="https://homes.cs.washington.edu/~mernst/pubs/variable-interactions-woda2015-slides.pdf">[.ppt]</a> <br />
+      </li> <br />
 
-  <li>
-    <b>What is the Impact of P2P Traffic on Anomaly Detection?</b> <br />
-    <i>Irfan Ul Haq</i>, Sardar Ali, Hassan Khan, and Syed Ali Khayam<br />
-    13th International Symposium on Recent Advances in Intrusion Detection (RAID), September 15-17, 2010. <br />
-    Ottawa, Ontario, Canada. <br />
-    Acceptance Rate: 23.1% <br />
-    <a href="https://github.com/haqirfan/haqirfan.github.io/blob/master/2010-RAID-evalp2p.pdf">[.pdf]</a>
-    <a href="http://www.raid-symposium.org/raid2010/files/Irfan%20Ul%20Haq.pdf">[.ppt]</a> <br />
-  </li>
-  <br />
+      <li>
+        <b>What is the Impact of P2P Traffic on Anomaly Detection?</b> <br />
+        <u>Irfan Ul Haq</u>, Sardar Ali, Hassan Khan, and Syed Ali Khayam <br />
+        13th International Symposium on Recent Advances in Intrusion Detection (RAID), September 15-17, 2010. 
+        Ottawa, Canada. <br />
+        <a href="https://github.com/haqirfan/haqirfan.github.io/blob/master/2010-RAID-evalp2p.pdf">[.pdf]</a>
+        <a href="http://www.raid-symposium.org/raid2010/files/Irfan%20Ul%20Haq.pdf">[.ppt]</a> <br />
+      </li> <br />
 
-  <li>
-    <b>On Mitigating Sampling-Induced Accuracy Loss in Traffic Anomaly Detection Systems</b> <br />
-    Sardar Ali, <i>Irfan Ul Haq</i>, Sajjad Rizvi, Naurin Rasheed, Unum Sarfraz, Syed Ali Khayam, and Fauzan Mirza <br />
-    ACM SIGCOMM Computer Communication Review (CCR), Volume 40 Issue 3, July 2010.<br />
-    ACM New York, NY, USA <br />
-    <a href="https://github.com/haqirfan/haqirfan.github.io/blob/master/2010-CCR-psas.pdf">[.pdf]</a> <br />
-  </li>
-</ul>
+      <li>
+        <b>On Mitigating Sampling-Induced Accuracy Loss in Traffic Anomaly Detection Systems</b> <br />
+        Sardar Ali, <u>Irfan Ul Haq</u>, Sajjad Rizvi, Naurin Rasheed, Unum Sarfraz, Syed Ali Khayam, and Fauzan Mirza <br />
+        ACM SIGCOMM Computer Communication Review (CCR), July 2010.<br />
+        <a href="https://github.com/haqirfan/haqirfan.github.io/blob/master/2010-CCR-psas.pdf">[.pdf]</a> <br />
+      </li>
+    </ul>
 
+  <h2>Professional Services</h2>
+  <ul> <li> <b>Committee Member Artifact Evaluation:</b> <br /> 2018: ACSAC </li> </ul>
+  <ul> <li> <b>External Reviewer: </b> <br /> 2016: ARES </li> </ul>
 
-<h3>Thesis</h3>
-<ul>
-  <li>
-    <b>Evaluation of Anomaly Detection Sytems under P2P Traffic</b> <br />
-    Master thesis. It was completed under the supervison of Dr. Syed Ali Khaym <br />
-    <a>[.pdf]</a> <br />
-  </li>
-</ul>
+  <h2>Conference and Seminar Talks</h2>
+  <ul>
+    <li> <b>Malware Lineage in the Wild</b> <br />
+    IMDEA Software Institute, 2017, Madrid, Spain
+    </li>
+  </ul>
+
+  <ul>
+    <li> <b>Ayudante: Identifying Undesired Variable Interactions</b>  <br />
+    <ul>
+      <li> Jornadas Nacionales de Investigacin en Ciberseguridad, 2016, Garanda, Spain. </li>
+      <li> IMDEA Software Institute 2016, Madrid, Spain. </li>
+      <li> 13th International Workshop on Dynamic Aanalysis 2015, Pittsburg, USA.</li>
+      <li> Microsoft PhD Summer School 2015. Cambridge, UK.</li>
+    </ul>
+  </ul>
+
+  <ul>
+    <li> <b> What is the Impact of P2P Traffic on Anomaly Detection </b>  <br />
+      International Symposium on Recent Advance in Intrusion Detection, 2010, Ottawa, Canada.
+    </li>
+  </ul>
+
+  <h2>Thesis</h2>
+  <ul>
+    <!--
+    <li>
+      <b>Binary Code Similarity Approaches for Obfuscated Binary Programs</b> <a>[.pdf]</a> <br />
+      Advisor: <a href="http://software.imdea.org/~juanca/">Juan Caballero</a><br />
+      Universidad Politecnica de Madrid &
+      IMDEA Software Institute, Madrid, Spain <br /> 
+    </li> <br /> -->
+    <li>
+      <b>Evaluation of Anomaly Detection Sytems under P2P Traffic</b> <a>[.pdf]</a> <br />
+      Advisor: Syed Ali Khaym <br />
+      NUST School of Electrical Engineering and Computer Sciences (SEECS), Islamabad, Pakistan.
+    </li>
+  </ul>
+  </div>
+</div>
+
+</body>
+</html>
